--- a/index.html
+++ b/index.html
@@ -12,17 +12,28 @@
 
 <body>
     <header>
-        <nav></nav>
+        <div class="container">
+            <a href="index.html">Andrew Lah- Web Prodution 2</a>
+            <nav>
+                <ul>
+                    <li><a href="">Homeworks</a></li>
+                    <li><a href="#">Midterm</a></li>
+                    <li><a href="#">Final</a></li>
+                    <li><a href="#">Previous work</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
     <h1>Web Production 2</h1>
 
-    <h2>Andrew Lah</h2>
-
-    <p>Welcome to my page. My name is Andrew Lah and I am a junior at CUNY Hunter College. Outside of school I love to bike, rock climb,
+    <img src="img/me.jpg">
+    <p>Welcome to my page. My name is Andrew Lah and I am a junior at CUNY Hunter College. Outside of school I love to
+        bike, rock climb,
         take photos, and gym. Through this course, I would like to learn how to build an online store where I can sell
         clothing.</p>
 
-    <img src="img/me.jpg">
+    <h1></h1>
 </body>
 
 </html>
