--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
     </header>
     <h1>Web Production 2</h1>
 
-    <div id="intro">Welcome to my page. My name is Andrew Lah and I am a junior at CUNY Hunter College. Outside of school I love to
+    <p id="intro">Welcome to my page. My name is Andrew Lah and I am a junior at CUNY Hunter College. Outside of school I love to
         bike, rock climb,
         take photos, and gym. Through this course, I would like to learn how to build an online store where I can sell
         clothing.
-    </div>
+    <p>
     <img src="img/me.jpg">
 
 
