--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         take photos, and gym. Through this course, I would like to learn how to build an online store where I can sell
         clothing.
     <p>
-    <img src="img/me.jpg">
+    <img id="me" src="img/me.jpg">
 
 
 </body>
