--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Production 2</title>
-    <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
+    <link rel="stylesheet" href="css/index.css">
+    <script src="js/script.js"></script>
 </head>
 
 <body>
     <header>
         <div class="container">
-            <div id="back"><a href="index.html">Andrew Lah- Web Prodution 2</a></div>
+            <div id="back"><a href="index.html">Andrew Lah- Web Production 2</a></div>
             <nav>
                 <ul>
                     <li><a href="">Homeworks</a></li>
