--- a/week2.html
+++ b/week2.html
@@ -88,7 +88,7 @@
             </span>LIGHT<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span
                 style="color:transparent">INHABITED</span> BY FRIENDS</div>
     </div>
-<sub>by Andrew Lah</sub>
+<sub>by Andrew lah</sub>
 
 </body>
 <grammarly-desktop-integration data-grammarly-shadow-root="true"></grammarly-desktop-integration>
