--- a/week2.html
+++ b/week2.html
@@ -24,7 +24,7 @@
     IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
     -->
     <link rel="stylesheet" href="css/week2.css">
-    <title>Use of Dust</title>
+    <title>The King's Morning</title>
 </head>
 
 <body onload="produce_litany();" data-new-gr-c-s-check-loaded="14.1050.0" data-gr-ext-installed="">
