--- a/week2.html
+++ b/week2.html
@@ -24,6 +24,8 @@
     IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
     -->
     <link rel="stylesheet" href="css/week2.css">
+    <script src="js/week2.js"></script>
+
     <title>The King's Morning</title>
 </head>
 
