--- a/week2.html
+++ b/week2.html
@@ -32,63 +32,46 @@
 <body onload="produce_litany();" data-new-gr-c-s-check-loaded="14.1050.0" data-gr-ext-installed="">
 
     <div id="main">
-        <div><span style="color:transparent">A HO</span>USE OF WEED<span
-                style="color:transparent">S</span><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;ON <span
-                style="color:transparent">AN
-                IS</span>LAND<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span
-                style="color:transparent">U</span>SING <span
-                style="color:transparent">CANDLES</span><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span
-                style="color:transparent">INHABITED</span> BY VARIOUS BIRDS AND FISH</div>
-        <div><span style="color:transparent">A HO</span>USE OF MUD<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;IN A
-            DESERT<span style="color:transparent">ED</span>
-            CHURCH<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span
-                style="color:transparent">U</span>SING <span
-                style="color:transparent">CANDLES</span><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span
-                style="color:transparent">INHABITED</span> BY CHILDREN AND OLD PEOPLE</div>
-        <div><span style="color:transparent">A HO</span>USE OF <span
-                style="color:transparent">L</span>EAVES<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;IN <span
-                style="color:transparent">A P</span>LACE <span style="color:transparent">W</span>I<span
-                style="color:transparent">TH BOTH HEAVY RAIN AND B</span>RIG<span style="color:transparent">HT
-                SUN</span><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span
-                style="color:transparent">U</span>SING <span style="color:transparent">N</span>A<span
-                style="color:transparent">TURAL
-            </span>LIGHT<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span
-                style="color:transparent">INHABITED</span> BY <span style="color:transparent">FRENCH AND GERMAN</span>
-            SPEAKING PEOPLE</div>
-        <div><span style="color:transparent">A HO</span>USE OF <span
-                style="color:transparent">ST</span>RAW<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;IN A DESERT<span
-                style="color:transparent">ED</span>
-            CHURCH<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span
-                style="color:transparent">U</span>SING <span style="color:transparent">N</span>A<span
-                style="color:transparent">TURAL
-            </span>LIGHT<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span
-                style="color:transparent">INHABITED</span> BY <span style="color:transparent">FRENCH AND GERMAN</span>
-            SPEAKING PEOPLE</div>
-        <div><span style="color:transparent">A HO</span>USE OF <span
-                style="color:transparent">ST</span>EEL<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;BY A
-            RIVER<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span
-                style="color:transparent">U</span>SING <span
-                style="color:transparent">ELECTRI</span>CITY<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span
-                style="color:transparent">INHABITED</span> BY <span style="color:transparent">FRENCH AND GERMAN</span>
-            SPEAKING PEOPLE</div>
-        <div><span style="color:transparent">A HO</span>USE OF TIN<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;IN A
-            METRO<span
-                style="color:transparent">POLIS</span><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span
-                style="color:transparent">U</span>SING <span
-                style="color:transparent">CANDLES</span><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span
-                style="color:transparent">INHABITED</span> BY LITTLE BOYS</div>
-        <div><span style="color:transparent">A HO</span>USE OF SAND<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;IN <span
-                style="color:transparent">HEAVY JUNGLE
-                UNDER</span>GROWTH<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span
-                style="color:transparent">U</span>SING <span
-                style="color:transparent">CANDLES</span><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span
-                style="color:transparent">INHABITED</span> BY PEOPLE WHO EAT A GREAT DEAL</div>
-        <div><span style="color:transparent">A HO</span>USE OF
-            SAND<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;UNDERWATER<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span
-                style="color:transparent">U</span>SING <span style="color:transparent">N</span>A<span
-                style="color:transparent">TURAL
-            </span>LIGHT<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span
-                style="color:transparent">INHABITED</span> BY FRIENDS</div>
+        <div>
+            <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</div>
+
+        <div>
+            <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        </div>
+        <div>
+            <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        </div>
+        <div>
+            <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        </div>
+        <div>
+            <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        </div>
+        <div>
+            <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        </div>
+        <div>
+            <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        </div>
+        <div>
+            <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        </div>
     </div>
 <sub>by Andrew lah</sub>
 
