--- a/week2.html
+++ b/week2.html
@@ -32,48 +32,48 @@
 <body onload="produce_litany();" data-new-gr-c-s-check-loaded="14.1050.0" data-gr-ext-installed="">
 
     <div id="main">
-        <div>
-            <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</div>
-
-        <div>
-            <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <div>HE RISES FROM HIS BED
+            <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;WITH THOUGHTS OF IN HIS HEAD
+            <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;HE EATS HIS WITH LOTS OF BREAD
+            <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;FOR THE DAY AHEAD
         </div>
-        <div>
-            <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <div>HE RISES FROM HIS BED
+            <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;WITH THOUGHTS OF IN HIS HEAD
+            <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;HE EATS HIS WITH LOTS OF BREAD
+            <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;FOR THE DAY AHEAD
         </div>
-        <div>
-            <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <div>HE RISES FROM HIS BED
+            <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;WITH THOUGHTS OF IN HIS HEAD
+            <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;HE EATS HIS WITH LOTS OF BREAD
+            <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;FOR THE DAY AHEAD
         </div>
-        <div>
-            <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <div>HE RISES FROM HIS BED
+            <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;WITH THOUGHTS OF IN HIS HEAD
+            <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;HE EATS HIS WITH LOTS OF BREAD
+            <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;FOR THE DAY AHEAD
         </div>
-        <div>
-            <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <div>HE RISES FROM HIS BED
+            <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;WITH THOUGHTS OF IN HIS HEAD
+            <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;HE EATS HIS WITH LOTS OF BREAD
+            <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;FOR THE DAY AHEAD
         </div>
-        <div>
-            <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <div>HE RISES FROM HIS BED
+            <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;WITH THOUGHTS OF IN HIS HEAD
+            <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;HE EATS HIS WITH LOTS OF BREAD
+            <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;FOR THE DAY AHEAD
         </div>
-        <div>
-            <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <div>HE RISES FROM HIS BED
+            <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;WITH THOUGHTS OF IN HIS HEAD
+            <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;HE EATS HIS WITH LOTS OF BREAD
+            <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;FOR THE DAY AHEAD
+        </div>
+        <div>HE RISES FROM HIS BED
+            <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;WITH THOUGHTS OF IN HIS HEAD
+            <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;HE EATS HIS WITH LOTS OF BREAD
+            <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;FOR THE DAY AHEAD
         </div>
     </div>
-<sub>by Andrew lah</sub>
+
 
 </body>
 <grammarly-desktop-integration data-grammarly-shadow-root="true"></grammarly-desktop-integration>
