--- a/week2.html
+++ b/week2.html
@@ -14,7 +14,8 @@
             color: #646F9B;
             text-decoration: none;
         }
-        h1{
+
+        h1 {
             text-transform: uppercase;
             font-size: 30pt;
         }
@@ -24,7 +25,7 @@
             font-size: 12pt;
         }
 
-        h2{
+        h2 {
             font-style: italic;
         }
 
@@ -38,7 +39,6 @@
             font-weight: bold;
             padding-bottom: 21px;
         }
-
     </style>
 
     <script type="text/javascript">
@@ -144,69 +144,64 @@
 </head>
 
 <body onload="produce_litany();" data-new-gr-c-s-check-loaded="14.1050.0" data-gr-ext-installed="">
-    <h1>The King's Morning <sub>by Andrew Lah</sub></h1> 
-    
+    <h1>The King's Morning <sub>by Andrew Lah</sub></h1>
+
     <div id="main">
-        <div><span style="color:transparent">A HO</span>USE OF <span
-                style="color:transparent">ST</span>ONE<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;BY THE
+        <div><span style="color:transparent">THE KING RISES </span>FROM HIS <span
+                style="color:transparent">ST</span>BED<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;BY THE
             SEA<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span
                 style="color:transparent">U</span>SING ALL<span style="color:transparent"> AVAILABLE
                 LIGHTING</span><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span
                 style="color:transparent">INHABITED</span> BY VERY TALL PEOPLE</div>
 
-        <div><span style="color:transparent">A HO</span>USE OF <span style="color:transparent">BR</span>OK<span
-                style="color:transparent">EN DISHES</span><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;ON THE
+        <div><span style="color:transparent">THE KING RISES </span>FROM HIS <span
+                style="color:transparent">ST</span>BED<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;BY THE
             SEA<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span
                 style="color:transparent">U</span>SING ALL<span style="color:transparent"> AVAILABLE
                 LIGHTING</span><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span
-                style="color:transparent">INHABITED</span> BY ALL RACES <span style="color:transparent">OF MEN</span>
-            REPRESENTED <span style="color:transparent">WEARING PREDOMINANTLY RED CLOTHING</span></div>
+                style="color:transparent">INHABITED</span> BY VERY TALL PEOPLE</div>
 
-        <div><span style="color:transparent">A HO</span>USE OF PAPER<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span
-                style="color:transparent">IN S</span>OUT<span style="color:transparent">HERN F</span>RAN<span
-                style="color:transparent">CE</span><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span
-                style="color:transparent">U</span>SING <span
-                style="color:transparent">ELECTRI</span>CITY<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span
-                style="color:transparent">INHABITED</span> BY FRIENDS</div>
+        <div><span style="color:transparent">THE KING RISES </span>FROM HIS <span
+                style="color:transparent">ST</span>BED<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;BY THE
+            SEA<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span
+                style="color:transparent">U</span>SING ALL<span style="color:transparent"> AVAILABLE
+                LIGHTING</span><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span
+                style="color:transparent">INHABITED</span> BY VERY TALL PEOPLE</div>
 
-        <div><span style="color:transparent">A HO</span>USE OF ROOTS<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;ON <span
-                style="color:transparent">AN
-                IS</span>LAND<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span
-                style="color:transparent">U</span>SING <span style="color:transparent">N</span>A<span
-                style="color:transparent">TURAL
-            </span>LIGHT<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span
-                style="color:transparent">INHABITED</span> BY ALL RACES <span style="color:transparent">OF MEN</span>
-            REPRESENTED <span style="color:transparent">WEARING PREDOMINANTLY RED CLOTHING</span></div>
+        <div><span style="color:transparent">THE KING RISES </span>FROM HIS <span
+                style="color:transparent">ST</span>BED<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;BY THE
+            SEA<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span
+                style="color:transparent">U</span>SING ALL<span style="color:transparent"> AVAILABLE
+                LIGHTING</span><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span
+                style="color:transparent">INHABITED</span> BY VERY TALL PEOPLE</div>
 
-        <div><span style="color:transparent">A HO</span>USE OF MUD<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;IN <span
-                style="color:transparent">HEAVY JUNGLE
-                UNDER</span>GROWTH<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span
-                style="color:transparent">U</span>SING <span
-                style="color:transparent">ELECTRI</span>CITY<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span
-                style="color:transparent">INHABITED</span> BY FISHERMEN AND FAMILIES</div>
+        <div><span style="color:transparent">THE KING RISES </span>FROM HIS <span
+                style="color:transparent">ST</span>BED<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;BY THE
+            SEA<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span
+                style="color:transparent">U</span>SING ALL<span style="color:transparent"> AVAILABLE
+                LIGHTING</span><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span
+                style="color:transparent">INHABITED</span> BY VERY TALL PEOPLE</div>
 
-        <div><span style="color:transparent">A HO</span>USE OF TIN<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span
-                style="color:transparent">IN S</span>OUT<span style="color:transparent">HERN F</span>RAN<span
-                style="color:transparent">CE</span><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span
-                style="color:transparent">U</span>SING <span
-                style="color:transparent">CANDLES</span><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span
-                style="color:transparent">INHABITED</span> BY PEOPLE WHO <span style="color:transparent">SLEEP ALMOST
-                ALL THE</span> TIME</div>
+        <div><span style="color:transparent">THE KING RISES </span>FROM HIS <span
+                style="color:transparent">ST</span>BED<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;BY THE
+            SEA<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span
+                style="color:transparent">U</span>SING ALL<span style="color:transparent"> AVAILABLE
+                LIGHTING</span><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span
+                style="color:transparent">INHABITED</span> BY VERY TALL PEOPLE</div>
 
-        <div><span style="color:transparent">A HO</span>USE OF PAPER<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;I<span
-                style="color:transparent">NSIDE A </span>MOUNT<span
-                style="color:transparent">AIN</span><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span
-                style="color:transparent">U</span>SING <span
-                style="color:transparent">ELECTRI</span>CITY<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span
-                style="color:transparent">INHABITED</span> BY PEOPLE <span style="color:transparent">FROM MANY
-                WALKS</span> OF LIFE</div>
-                
-        <div><span style="color:transparent">A HO</span>USE OF WOOD<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span
-                style="color:transparent">IN S</span>OUT<span style="color:transparent">HERN F</span>RAN<span
-                style="color:transparent">CE</span><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span
-                style="color:transparent">U</span>SING <span
-                style="color:transparent">CANDLES</span><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span
-                style="color:transparent">INHABITED</span> BY COLLECTORS OF ALL TYPES</div>
+        <div><span style="color:transparent">THE KING RISES </span>FROM HIS <span
+                style="color:transparent">ST</span>BED<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;BY THE
+            SEA<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span
+                style="color:transparent">U</span>SING ALL<span style="color:transparent"> AVAILABLE
+                LIGHTING</span><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span
+                style="color:transparent">INHABITED</span> BY VERY TALL PEOPLE</div>
+
+        <div><span style="color:transparent">THE KING RISES </span>FROM HIS <span
+                style="color:transparent">ST</span>BED<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;BY THE
+            SEA<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span
+                style="color:transparent">U</span>SING ALL<span style="color:transparent"> AVAILABLE
+                LIGHTING</span><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span
+                style="color:transparent">INHABITED</span> BY VERY TALL PEOPLE</div>
     </div>
 
 
