--- a/week2.html
+++ b/week2.html
@@ -119,7 +119,7 @@
         }
         function stanza() {
             "use strict";
-            return '<span style="color:transparent">THE KING </span>RISES FROM HIS  ' + choose(adjective) + ' BED' + '<br \>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;' + 'WITH THOUGHTS OF ' + choose(animals) + ' IN HIS HEAD' + '<br \>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;HE EATS HIS ' + choose(food) + ' WITH LOTS OF BREAD' + '<br \>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;' + choose(feelings) + ' FOR THE DAY AHEAD...';
+            return '<span style="color:transparent">THE KING </span>RISES FROM HIS  ' + choose(adjective) + ' BED' + '<br \>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;' + 'WITH <span style="color:transparent">THOUGHTS</span> OF ' + choose(animals) + ' IN HIS HEAD' + '<br \>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;HE EATS HIS ' + choose(food) + ' WITH <span style="color:transparent">LOTS OF BREAD</span>' + '<br \>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;' + choose(feelings) + ' FOR THE DAY AHEAD...';
         }
         function litany() {
             "use strict";
@@ -144,7 +144,7 @@
 </head>
 
 <body onload="produce_litany();" data-new-gr-c-s-check-loaded="14.1050.0" data-gr-ext-installed="">
-    <h1>The King's Morning <sub>by Andrew Lah</sub></h1>
+    <h1>The King's Morning </h1><h2>by Andrew Lah</h2><br>
 
     <div id="main">
         
