--- a/week2.html
+++ b/week2.html
@@ -78,9 +78,7 @@
                 'BOB<span style="color:transparent">CATS</span>',
                 'CLAMS',
                 'DO<span style="color:transparent">VES</span>',
-                'ELK',
-                'IN A METRO<span style="color:transparent">POLIS</span>',
-                'UNDERWATER'],
+                'ELK'],
             food = ['<span style="color:transparent">JAM</span>',
                 'BUTTER<span style="color:transparent"> CHICKEN</span>',
                 '<span style="color:transparent">TOMA</span>TOES',
@@ -119,7 +117,12 @@
         }
         function stanza() {
             "use strict";
-            return '<span style="color:transparent">THE KING </span>RISES FROM HIS  ' + choose(adjective) + ' BED' + '<br \>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;' + 'WITH <span style="color:transparent">THOUGHTS</span> OF ' + choose(animals) + ' IN HIS HEAD' + '<br \>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;HE EATS HIS ' + choose(food) + ' WITH <span style="color:transparent">LOTS OF BREAD</span>' + '<br \>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;' + choose(feelings) + ' FOR THE DAY AHEAD...';
+            return '<span style="color:transparent">THE KING </span>RISES FROM HIS  ' + 
+            choose(adjective) + 
+            ' BED' + '<br \>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;' + 'WITH <span style="color:transparent">THOUGHTS</span> OF ' + 
+            choose(animals) + ' IN HIS HEAD' + '<br \>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;HE EATS HIS ' + 
+            choose(food) + ' WITH <span style="color:transparent">LOTS OF BREAD</span>' + '<br \>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;' + 
+            choose(feelings) + ' FOR THE DAY AHEAD...';
         }
         function litany() {
             "use strict";
