--- a/week2.html
+++ b/week2.html
@@ -120,7 +120,7 @@
             return '<span style="color:transparent">THE KING </span>RISES FROM HIS  ' + 
             choose(adjective) + 
             ' BED' + '<br \>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;' + 'WITH <span style="color:transparent">THOUGHTS</span> OF ' + 
-            choose(animals) + ' IN HIS HEAD' + '<br \>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;HE EATS HIS ' + 
+            choose(animals) + ' IN HIS HEAD' + '<br \>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;HE <span style="color:transparent">EATS</span> HIS ' + 
             choose(food) + ' WITH <span style="color:transparent">LOTS OF BREAD</span>' + '<br \>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;' + 
             choose(feelings) + ' FOR THE DAY AHEAD...';
         }
