--- a/week2.html
+++ b/week2.html
@@ -2,46 +2,8 @@
 
 <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
-    <style type="text/css">
-        body {
-            background: #9B646F;
-            color: #6F9B64;
-            margin: 32pt 0 0 18pt;
-            font-family: 'Segoe UI', Tahoma, Verdana, sans-serif;
-        }
-
-        a {
-            color: #646F9B;
-            text-decoration: none;
-        }
-
-        h1 {
-            text-transform: uppercase;
-            font-size: 30pt;
-        }
-
-        h1 sub {
-            text-transform: uppercase;
-            font-size: 12pt;
-        }
-
-        h2 {
-            font-style: italic;
-        }
-
-        #main {
-            width: 70%;
-        }
-
-        #main div {
-            font-size: 20pt;
-            font-style: italic;
-            font-weight: bold;
-            padding-bottom: 21px;
-        }
-    </style>
-
-    <script type="text/javascript">
+    <link rel="stylesheet" href="css/week2.css">
+    <script src="js/week2.js"></script>
 
         var t = 0,
             adjective = ['TIDY',
