--- a/week2/week2.html
+++ b/week2/week2.html
@@ -3,18 +3,18 @@
 <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <link rel="stylesheet" href="week2.css">
-    <script src="week2.js"></script>
+    
     <title>Week 2- The King's Morning</title>
 </head>
 
 <body onload="produce_litany();" data-new-gr-c-s-check-loaded="14.1050.0" data-gr-ext-installed="">
-    <h1>The King's Morning </h1><h2>by Andrew Lah</h2><br>
+    <h1>The King's Morning </h1>
+    <h2>by Andrew Lah</h2><br>
 
     <div id="main">
-        
+
     </div>
-
-
+    <script src="week2.js"></script>
 </body>
 <grammarly-desktop-integration data-grammarly-shadow-root="true"></grammarly-desktop-integration>
 
