--- a/week3/week3.html
+++ b/week3/week3.html
@@ -4,11 +4,10 @@
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <link rel="stylesheet" href="week3.css">
     
-    <title>Week 2- The King's Morning</title>
+    <title>Week 3- The King's Morning</title>
 </head>
 
 <body onload="produce_litany();" data-new-gr-c-s-check-loaded="14.1050.0" data-gr-ext-installed="">
-    
     <h1>The King's Morning </h1>
     <h2>by Andrew Lah</h2><br>
 
@@ -16,6 +15,26 @@
 
     </div>
 
+
+    <script>
+        let y = 200;
+        let speed =1;
+        function setup() {
+            createCanvas(400, 400);
+        }
+
+        function draw() {
+            background("#9B646F");
+            fill("#6F9B64");
+            noStroke();
+            ellipse(200, y+20, 250, 250);
+            ellipse(200, y, 250, 250);
+            y += speed;
+            if (y >= 400 || y <= 0) { // once the ellipse has reached either side of the canvas...
+                speed *= -1; // ...reverse its direction of movement
+            }
+        }
+    </script>
     <script src="https://cdn.jsdelivr.net/npm/p5@1.4.1/lib/p5.js"></script>
     <script src="week3.js"></script>
 </body>
