--- a/week2/week2.html
+++ b/week2/week2.html
@@ -3,7 +3,7 @@
 <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <link rel="stylesheet" href="week2.css">
-    
+
     <title>Week 2- The King's Morning</title>
 </head>
 
@@ -14,6 +14,8 @@
     <div id="main">
 
     </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/p5@1.4.1/lib/p5.js"></script>
     <script src="week2.js"></script>
 </body>
 <grammarly-desktop-integration data-grammarly-shadow-root="true"></grammarly-desktop-integration>
