--- a/week3/week3.html
+++ b/week3/week3.html
@@ -20,7 +20,7 @@
         let y = 200;
         let speed = 1;
         function setup() {
-            createCanvas(400, 400);
+            createCanvas(windowWidth, windowHeight);
         }
 
         function draw() {
