--- a/week3/week3.html
+++ b/week3/week3.html
@@ -10,30 +10,32 @@
 <body onload="produce_litany();" data-new-gr-c-s-check-loaded="14.1050.0" data-gr-ext-installed="">
     <h1>The King's Morning </h1>
     <h2>by Andrew Lah</h2><br>
-
+    <img id="bed" src="img/kingsbed.png">
     <div id="main">
 
     </div>
 
 
     <script>
-        let y = 200;
-        let speed = 1;
+        let img
+
+        function preload() {
+            img = loadImage('img/crown.png')
+        }
+
         function setup() {
-            createCanvas(windowWidth, windowHeight);
+            createCanvas(800, 800);
+            imageMode(CENTER)
+            noCursor()
         }
 
         function draw() {
-            background("#9B646F");
-            fill("#6F9B64");
-            noStroke();
-            ellipse(200, y + 20, 250, 250);
-            ellipse(200, y, 250, 250);
-            y += speed;
-            if (y >= 400 || y <= 0) {
-                speed *= -1;
-            }
+            background(155, 100, 111);
+            image(img, mouseX, mouseY)
+            img.resize(80,70);
         }
+
+        
     </script>
     <script src="https://cdn.jsdelivr.net/npm/p5@1.4.1/lib/p5.js"></script>
     <script src="week3.js"></script>
