--- a/week3/week3.html
+++ b/week3/week3.html
@@ -24,7 +24,7 @@
         }
 
         function setup() {
-            createCanvas(800, 800);
+            createCanvas(windowWidth, windowHeight);
             imageMode(CENTER)
             noCursor()
         }
@@ -32,7 +32,7 @@
         function draw() {
             background(155, 100, 111);
             image(img, mouseX, mouseY)
-            img.resize(80,70);
+            img.resize(80,65);
         }
 
         
