--- a/week3/week3.html
+++ b/week3/week3.html
@@ -11,6 +11,7 @@
     <h1>The King's Morning </h1>
     <h2>by Andrew Lah</h2><br>
     <img id="bed" src="img/kingsbed.png">
+    <img id="sun" src="img/sun.png">
     <div id="main">
 
     </div>
