--- a/week4/week4.html
+++ b/week4/week4.html
@@ -9,21 +9,18 @@
     <main>
       <h1 id="title">Lah's Media Player</h1>
       <section> <div>
+
   <p>
-  Want to go wacky mode? <input type="text" id="wackyMode"><button onclick="goWackyMode()">Submit</button>
-      <p id="wronganswer"></p>
-  <p>
-  <p>
-  <h3>What type of video do you want to play?</h3>
+  <h3>Collection of Curb Your Memes</h3>
   <select name="video" id="video-select">
-    <option value="funny">Funny</option>
-    <option value="trippy">Trippy</option>
+    <option value="age">Curb Your Age</option>
+    <option value="racism">Curb Your Racism</option>
   </select>
   <button onclick="selectVideo()">Select</button>
   </p>
         <div class="player">
           <video controls loop>
-            <source src="videos/unusual_instrument.mp4" type="video/mp4">
+            <source src="vid/curbyourracism.mp4" type="video/mp4">
             <!-- fallback content here -->
           </video>
           <div class="controls">
