--- a/week4/week4.html
+++ b/week4/week4.html
@@ -13,6 +13,7 @@
         <section>
             <div>
 
+
                 <p>
                 <h3>Collection of Curb Your Memes</h3>
                 <select name="video" id="video-select">
@@ -23,7 +24,7 @@
                 </p>
                 <div class="player">
                     <video controls loop>
-                        <source src="vid/curbyourracism.mp4" type="video/mp4">
+                        <source src="vid/curbyourrage.mp4" type="video/mp4">
                         <!-- fallback content here -->
                     </video>
                     <div class="controls"></div>
