--- a/week4/week4.html
+++ b/week4/week4.html
@@ -24,7 +24,7 @@
                 </p>
                 <div class="player">
                     <video controls loop>
-                        <source src="vid/curbyourrage.mp4" type="video/mp4">
+                        <source src="vid/curbyourage.mp4" type="video/mp4">
                         <!-- fallback content here -->
                     </video>
                     <div class="controls"></div>
