--- a/week4/week4.html
+++ b/week4/week4.html
@@ -1,45 +1,56 @@
 <!DOCTYPE html>
 <html>
-
-<head>
+  <head>
     <script src="utility.js"></script>
     <link rel="stylesheet" href="week4.css">
     <title> Lah's Media Player </title>
-</head>
-
-<body>
+  </head>
+  <body>
     <main>
-        <h1 id="title">Lah's Media Player</h1>
-        <section>
-            <div>
+      <h1 id="title">Lah's Media Player</h1>
+      <section> <div>
 
+  <p>
+  <h3>Collection of Curb Your Memes</h3>
+  <select name="video" id="video-select">
+    <option value="age">Curb Your Age</option>
+    <option value="racism">Curb Your Racism</option>
+  </select>
+  <button onclick="selectVideo()">Select</button>
+  </p>
+        <div class="player">
+          <video controls loop>
+            <source src="vid/curbyourage.mp4" type="video/mp4">
+            <!-- fallback content here -->
+          </video>
+          <div class="controls">
+  <div>
+  <p>
 
-                <p>
-                <h3>Collection of Curb Your Memes</h3>
-                <select name="video" id="video-select">
-                    <option value="age">Curb Your Age</option>
-                    <option value="racism">Curb Your Racism</option>
-                </select>
-                <button onclick="selectVideo()">Select</button>
-                </p>
-                <div class="player">
-                    <video controls loop>
-                        <source src="vid/curbyourage.mp4" type="video/mp4">
-                        <!-- fallback content here -->
-                    </video>
-                    <div class="controls"></div>
+  </div>
+    Number: <input type="number" id="valueText">
+  </p>
+  <p>
+    <button id="play" onclick="playPauseMedia()">Play/Pause</button>
+  </p>
+ <p>
+    <button onclick="addToModifier();">Add to playback speed</button>
+    <button onclick="subtractModifier()">Subtract from playback speed</button>
+    <button onclick="multiplyModifier()">Multiply playback speed</button>
+    <button onclick="divideModifier()">Divide Playback speed</button>
+  </p>
+  <p id="playbackSpeed">
+    Playback speed is 1
+  </p>
+  <p>
+    <button onclick="zeroModifier();">Reset Modifier</button>
+  </p>
+          </div>
+        </div>
 
-                    <p>
-                        <button id="play" onclick="playPauseMedia()">Play/Pause</button>
-                    </p>
-                
-                </div>
-            </div>
-
-        </section>
+      </section>
     </main>
-    <button id="backgroundchange">change background</button>
+<button id="backgroundchange">change background</button>
     <script src="week4.js"></script>
-</body>
-
+  </body>
 </html>
