--- a/week4/week4.html
+++ b/week4/week4.html
@@ -20,7 +20,7 @@
   </p>
         <div class="player">
           <video controls loop>
-            <source src="vid/curbyourage.mp4" type="video/mp4">
+            <source src="vid/curbyourracism.mp4" type="video/mp4">
             <!-- fallback content here -->
           </video>
           <div class="controls">
