--- a/week4/week4.html
+++ b/week4/week4.html
@@ -13,14 +13,14 @@
   <p>
   <h3>Collection of Curb Your Memes</h3>
   <select name="video" id="video-select">
-    <option value="funny">Funny</option>
-    <option value="trippy">Trippy</option>
+    <option value="age">Curb Your Age</option>
+    <option value="racism">Curb Your Racism</option>
   </select>
   <button onclick="selectVideo()">Select</button>
   </p>
         <div class="player">
           <video controls loop>
-            <source src="videos/unusual_instrument.mp4" type="video/mp4">
+            <source src="vid/curbyourage.mp4" type="video/mp4">
             <!-- fallback content here -->
           </video>
           <div class="controls">
